# mini-1

./: .gitattributes  .gitignore  README.md  cloud_logs.json  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: analysis_agent.py  coordinator.py  policy_agent.py  response_agent.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  analysis_agent.py  coordinator.py  log_agent.py
backend/app/api/: server.py
backend/app/cli/: app.py  benchmark.py
backend/app/core/: compatibility.py  contracts.py  loader.py
backend/app/model/: model_metadata.calibrated.json  predict.py  train.py  transformer.py
backend/app/parser/: __init__.py  drain_parser.py  hdfs_parser.py
backend/app/services/: analyzer.py  threshold.py
backend/app/utils/: __init__.py  sequence_builder.py
backend/data/benchmarks/: manifest.json
backend/data/raw_logs/app/: cloud_workload_large_anomaly.json  cloud_workload_large_normal.json  cloud_workload_logs.json
backend/tests/: test_compatibility.py  test_contracts.py
cloud_simulator/: generate_large_cloud_workload_logs.py  generate_logs.py
data/raw_logs/app/: large_sample_logs.json  sample_logs.json
docs/: workflow_diagram.mmd  workflow_explanation.md
frontend/: .env.example  README.md  next.config.ts  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/health/: route.ts
frontend/components/: analyzer-dashboard.tsx
frontend/lib/: backend-api.ts
frontend/types/: analyzer.ts
model/: __init__.py  model.pt  model_metadata.json  predict.py  train.py  transformer_model.py
models/: lstm_autoencoder.keras  scaler.pkl  svd.pkl  threshold.npy  vectorizer.pkl
scripts/: test_agent.py  test_gemini.py  train_anamoly_model.py
src/agents/: analysis_agent.py  analyst.py  base.py  coordinator.py  llm_explanation_agent.py  log_agent.py  policy.py  policy_agent.py  response_agent.py
src/detection/: feature_extraction.py  scoring.py  thresholds.py
src/detection/anomoly_models/: isolation_forest.py
src/inference/: inference_pipeline.py
src/llm/: gemini.py
src/log_parser/: drain_parser.py
src/security/: log_parser.py
src/ui/: app.py
tests/: test_architecture.py  test_pipeline.py
utils/: dataset_builder.py
