[project]
name = "agentic-cyber-defense"
version = "0.1.0"
description = "Policy-aware multi-agent cybersecurity defense system"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "google-genai>=0.1.0",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/api",
    "src/core",
    "src/detection",
    "src/evaluations",
    "src/graph",
    "src/llm",
    "src/rag",
    "src/security",
    "src/ui",
]
